# peter-hook

./: .gitignore  .peter-hook.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TEST_ANALYSIS_INDEX.md  TEST_ANALYSIS_SUMMARY.txt  TEST_COVERAGE_GAPS.md  TEST_EXAMPLES.md  hooks.toml  install.sh  justfile
.github/workflows/: deps.yml  release.yml
docs/: architecture.rst  cli.rst  configuration.rst  examples.rst  failure-recovery-behavior.md  file-list.md  global_config.rst  overview.rst  quickstart.rst  security-audit-results.md  stress-test-results.md  templating.rst  test-plan.md
docs/plans/: 2025-12-10-config-rename-design.md  2025-12-10-config-rename-implementation.md
examples/: .peter-hook-with-imports.toml  hooks.lib.toml
src/: debug.rs  doctor.rs  lib.rs  main.rs
src/cli/: completions.rs  mod.rs
src/config/: global.rs  (+1 more)
tests/: cli_integration_tests.rs  cli_structure_tests.rs  deprecation_tests.rs  executor_comprehensive_tests.rs  failure_recovery_tests.rs  git_changes_tests.rs  hierarchical_comprehensive_tests.rs  installer_comprehensive_tests.rs  main_comprehensive_final_tests.rs  main_exhaustive_tests.rs  main_install_advanced_tests.rs  main_install_tests.rs  main_lint_advanced_tests.rs  main_lint_tests.rs  main_list_advanced_tests.rs  main_list_tests.rs  main_run_advanced_tests.rs  main_run_comprehensive_tests.rs  main_run_tests.rs  main_uninstall_tests.rs  main_validate_advanced_tests.rs  main_validate_tests.rs  requires_files_integration_tests.rs  resolver_comprehensive_tests.rs  security_tests.rs  stress_tests.rs  timeout_integration_tests.rs
(+9 files in other folders)
