[package]
name = "peter-hook"
version = "4.0.0"
edition = "2024"
rust-version = "1.86.0"
authors = ["Peter Hook Contributors"]
description = "A hierarchical git hooks manager for monorepos"
license = "MIT"
repository = "https://github.com/tftio/peter-hook"
keywords = ["git", "hooks", "monorepo", "development", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
 clap = { version = "4.5", features = ["derive"] }
 clap_complete = "4.5"
 anyhow = "1.0"
 glob = "0.3"
 once_cell = "1.21"
 indicatif = "0.18"
 console = "0.16"
 git2 = { version = "0.20", default-features = false }
 serde_json = "1.0"
 dirs = "6.0"
 shellexpand = "3.1"
workhelix-cli-common = "0.4.1"
cargo-edit = "0.13.7"



[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
serial_test = "3.2"
tempfile = "3.23"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
literal-string-with-formatting-args = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
